# linnaeus

./: .gitignore  Makefile  README.md  SPRINT_PROGRESS.md  USER_GUIDE.md  packages.txt  prepare_and_run.py  pyproject.toml  requirements.txt  run_pipeline.py  setup_spacy.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml  setup.sh
app/: __init__.py  classify.py  discover.py  embed.py  evaluate.py  export.py  ingest.py  redact.py  rules.py
app/ui_streamlit/: __init__.py  app.py
configs/: config.toml  taxonomy.yaml
rules/: keyword_rules.csv
